--- a/src/index.css
+++ b/src/index.css
@@ -1,33 +1,35 @@
 @import "tailwindcss";
 @plugin "daisyui";
 
+
+
 @plugin "daisyui/theme" {
-    name: "light";
-    default: false;
+    name: "sih-2025-major-project";
+    default: true;
     prefersdark: false;
     color-scheme: "light";
     --color-base-100: oklch(100% 0 0);
     --color-base-200: oklch(98% 0 0);
     --color-base-300: oklch(95% 0 0);
     --color-base-content: oklch(21% 0.006 285.885);
-    --color-primary: oklch(45% 0.24 277.023);
-    --color-primary-content: oklch(93% 0.034 272.788);
-    --color-secondary: oklch(65% 0.241 354.308);
-    --color-secondary-content: oklch(94% 0.028 342.258);
-    --color-accent: oklch(77% 0.152 181.912);
-    --color-accent-content: oklch(38% 0.063 188.416);
-    --color-neutral: oklch(14% 0.005 285.823);
-    --color-neutral-content: oklch(92% 0.004 286.32);
-    --color-info: oklch(74% 0.16 232.661);
-    --color-info-content: oklch(29% 0.066 243.157);
-    --color-success: oklch(76% 0.177 163.223);
-    --color-success-content: oklch(37% 0.077 168.94);
-    --color-warning: oklch(82% 0.189 84.429);
-    --color-warning-content: oklch(41% 0.112 45.904);
-    --color-error: oklch(71% 0.194 13.428);
-    --color-error-content: oklch(27% 0.105 12.094);
-    --radius-selector: 0.5rem;
-    --radius-field: 0.25rem;
+    --color-primary:  oklch(65% 0.18 45);
+    --color-primary-content: oklch(98% 0.01 45);
+    --color-secondary: oklch(55% 0.16 155);
+    --color-secondary-content: oklch(98% 0.01 155);
+    --color-accent: oklch(58% 0.24 25);
+    --color-accent-content: oklch(98% 0.01 25);
+    --color-neutral: oklch(62% 0.18 240);
+    --color-neutral-content:  oklch(95% 0.01 250);
+    --color-info: oklch(58% 0.158 241.966);
+    --color-info-content: oklch(98% 0 0);
+    --color-success:  oklch(65% 0.17 145);
+    --color-success-content: oklch(20% 0.05 145);
+    --color-warning: oklch(75% 0.16 85);
+    --color-warning-content: oklch(25% 0.05 85);
+    --color-error: oklch(60% 0.22 25);
+    --color-error-content: oklch(98% 0 0);
+    --radius-selector: 1rem;
+    --radius-field: 0.5rem;
     --radius-box: 0.5rem;
     --size-selector: 0.25rem;
     --size-field: 0.25rem;
@@ -35,3 +37,4 @@
     --depth: 1;
     --noise: 0;
 }
+
